--- a/docker/Dockerfile.ci
+++ b/docker/Dockerfile.ci
@@ -30,6 +30,18 @@ RUN apt-get update && apt-get install -y \
     ros-humble-launch-testing \
     ros-humble-launch-testing-ros \
     ros-humble-launch-testing-ament-cmake \
+    # ROS 2 message packages
+    ros-humble-std-msgs \
+    ros-humble-sensor-msgs \
+    ros-humble-geometry-msgs \
+    ros-humble-nav-msgs \
+    ros-humble-vision-msgs \
+    # ROS 2 transform library
+    ros-humble-tf2 \
+    ros-humble-tf2-ros \
+    # Computer vision (headless)
+    ros-humble-cv-bridge \
+    ros-humble-image-transport \
     # Required ROS 2 packages (no GUI)
     ros-humble-robot-state-publisher \
     ros-humble-xacro \
@@ -46,12 +58,12 @@ WORKDIR /ros2_ws
 
 # Create entrypoint script
 RUN echo '#!/bin/bash\n\
-set -e\n\
-source /opt/ros/humble/setup.bash\n\
-if [ -f /ros2_ws/install/setup.bash ]; then\n\
+    set -e\n\
+    source /opt/ros/humble/setup.bash\n\
+    if [ -f /ros2_ws/install/setup.bash ]; then\n\
     source /ros2_ws/install/setup.bash\n\
-fi\n\
-exec "$@"' > /ros_entrypoint.sh && chmod +x /ros_entrypoint.sh
+    fi\n\
+    exec "$@"' > /ros_entrypoint.sh && chmod +x /ros_entrypoint.sh
 
 ENTRYPOINT ["/ros_entrypoint.sh"]
 CMD ["bash", "-c", "colcon build && colcon test && colcon test-result --verbose"]
