--- a/test/system/CMakeLists.txt
+++ b/test/system/CMakeLists.txt
@@ -40,6 +40,7 @@ if(BUILD_TESTING)
   find_package(ament_cmake_pytest REQUIRED)
   find_package(launch_testing_ament_cmake REQUIRED)
 
+  # Linters specified in package.xml (excludes copyright - SPDX format not recognized)
   ament_lint_auto_find_test_dependencies()
 
   # ---------------------------------------------------------------------------
